poke/testsuite/poke.pkl/fun-types-diag-2.pk
/* { dg-do compile } */

deftype Callback = (...,)int; /* { dg-error "" } */
